--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-/* body {
+body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -7,7 +7,7 @@
   -moz-osx-font-smoothing: grayscale;
   background-color: black;
   color: white;
-} */
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
@@ -15,4 +15,7 @@ code {
 }
 .input_data {
   margin: 10px auto;
+}
+.HelpersBtns>* {
+  margin: auto 5px;
 }
